	HW addr in the linux way (but how do you "properly" determine the
	HW *type*...)

2004-06-24  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_intinfo.c (bk_intinfo_list_create): FreeBSD fixes

	* lib/b_exec.c (bk_pipe_to_process): work on systems without openpty,
	get openpty definition on FreeBSD systems
	
	* include/libbk_oscompat.h (strnlen, nearbyint, trunc): FreeBSD fixes

2004-06-21  Seth Robertson  <seth@cheviot.sysdetect.com>

	* lib/b_pollio.c (bk_polling_io_write): Time is a timeout, even on
	sync requests [though we are still not handling timeouts for
	post-initial sync].

2004-06-21  Seth Robertson  <seth@not.baka.org>

	* lib/b_relay.c (bk_relay_iohhandler): Because we overfill the
	output buffer when it fills up and we throttle, we should not
	automatically unthrottle when we write one buffer.  Theoretically,
	this should NOT cause an infinite amount of memory to be sunk, but
	we can seriously overfill especially if buffer sizes are in
	increasing size order.  While I was being stupid about something
	else, I discovered this and assumed it was the problem.

2004-06-16  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_netutils.c (bk_netutils_make_conn): Arguments for
	bk_netutils_make_conn_verbose() were totally in the wrong order.

2004-06-09  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_dll.c (bk_dll_insert_internal): Actually return return
	value instead of always DICT_OK. DOH!

2004-06-09  Seth Robertson  <seth@pearl.sysdetect.com>

	* src/bttcp.c (connect_complete): Now with added verbosity about
	connections accepted and completed.

	* src/bkrelay.c: Now relaying!

2004-06-08  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_addrgroup.c (bk_addressgroup_suspend): Allow server
	sockets to be suspended from being accepted for a time.

2004-06-08  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_vptr.c (bk_vptr_append): Make RO component (source
	bk_vptr) constant.

2004-06-07  James Tanis  <jtt@buscemi.sysdetect.com>
